[tool.poetry]
name = "data_plots"
version = "0.1.0"
description = ""
authors = ["David <davidverweij@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.2"
ipykernel = "^6.3.1"
jupyter = "^1.0.0"
plotly = "^5.3.1"
numpy = "^1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
